--- a/website/main_app/templates/components/requisites.html
+++ b/website/main_app/templates/components/requisites.html
@@ -1,17 +1,20 @@
+{% load static %}
+{% block requisites %}
 <div class="cart" id='requisites'>
-                <img class="cart__item-img" src="images/small_spb/56671153.jpg">
-                <div class="cart__box">
-                    <h3 class="cart__box-title">Реквизиты для б/н уплаты "Ежемесячного взноса"</h3>
-                        <ul class="cart__list">
-                            <li>СНТСН "Малый Петербург 1 очередь"</li>
-                            <li>Расчётный счёт: 40703810155410000122</li>
-                            <li>Банк: СЕВЕРО-ЗАПАДНЫЙ БАНК ПАО СБЕРБАНК</li>
-                            <li>БИК: 044030653</li>
-                            <li>Кор. счёт: 30101810500000000653</li>
-                            <li>ОГРН: 1114703000752</li>
-                            <li>ИНН: 4703121493</li>
-                            <li>КПП: 470301001</li>
-                            <li>Номер лицевого счета: <em>"это номер участка"</em></li>
-                        </ul>
-                </div>
-            </div>
+    <img class="cart__item-img" src="{% static 'images/small_spb/56671153.jpg' %}">
+    <div class="cart__box">
+        <h3 class="cart__box-title">Реквизиты для б/н уплаты "Ежемесячного взноса"</h3>
+        <ul class="cart__list">
+            <li>СНТСН "Малый Петербург 1 очередь"</li>
+            <li>Расчётный счёт: 40703810155410000122</li>
+            <li>Банк: СЕВЕРО-ЗАПАДНЫЙ БАНК ПАО СБЕРБАНК</li>
+            <li>БИК: 044030653</li>
+            <li>Кор. счёт: 30101810500000000653</li>
+            <li>ОГРН: 1114703000752</li>
+            <li>ИНН: 4703121493</li>
+            <li>КПП: 470301001</li>
+            <li>Номер лицевого счета: <em>"это номер участка"</em></li>
+        </ul>
+    </div>
+</div>
+{% endblock %}
