--- a/website/main_app/templates/components/contact_us.html
+++ b/website/main_app/templates/components/contact_us.html
@@ -1,17 +1,9 @@
 {% block contact_us %}
 <main class="main">
-    <div class="breadcrumbs">
-        <div class="container">
-            <ul class="breadcrumbs__list">
-                <li class="breadcrumbs__item">
-                    <a class="breadcrumbs__link" href="#">Главная</a>
-                </li>
-                <li class="breadcrumbs__item">
-                    <p class="breadcrumbs__link breadcrumbs__link--cursor">Обратная связь</p>
-                </li>
-            </ul>
-        </div>
-    </div><div class="container">
+    {% block breadcrumbs %}
+    {% include 'components/breadcrumbs.html' %}
+    {% endblock %}
+    <div class="container">
     <div class="map">
         <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Яндекс Карты</a><a href="https://yandex.ru/maps/?ll=30.756963%2C60.049370&mode=whatshere&source=wizgeo&utm_medium=mapframe&utm_source=maps&whatshere%5Bpoint%5D=30.770198%2C60.054067&whatshere%5Bzoom%5D=14.87&z=14.67" style="color:#eee;font-size:12px;position:absolute;top:14px;">ДНП Малый Петербург — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUBqFb-CD" width="100%" height="578" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
     </div></div>
