--- a/website/main_app/templates/components/electricity_table.html
+++ b/website/main_app/templates/components/electricity_table.html
@@ -1,18 +1,9 @@
 {% block elec_table %}
 
 <main class="main">
-        <div class="breadcrumbs">
-            <div class="container">
-                <ul class="breadcrumbs__list">
-                    <li class="breadcrumbs__item">
-                        <a class="breadcrumbs__link" href="{% url 'main' %}">Главная</a>
-                    </li>
-                    <li class="breadcrumbs__item">
-                        <p class="breadcrumbs__link breadcrumbs__link--cursor">Показания электроэнергии</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        {% block breadcrumbs %}
+        {% include 'components/breadcrumbs.html' %}
+        {% endblock %}
         <div class="container">
             <table class="table">
                 <thead>
