--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -309,7 +309,14 @@ a{
     padding-left:20px;
     padding-right:30px;
     padding-bottom: 15px;
+    height: 100px;
+    overflow: hidden;
+    position: relative;
 } 
+.news__wrapper--height{
+    min-height:100px;
+     height: auto;
+}
 .news__item{
     padding-top: 15px;
     border: 1px solid #d0d2d7;
@@ -339,6 +346,7 @@ a{
 .news__item-date{
     border-top:1px solid #d0d2d7 ;
     text-align: right;
+    padding-right:40px;
     font-size: 14px;
     line-height: 30px;
     font-weight: 600;
@@ -364,13 +372,36 @@ a{
     }
 
 
- .news__item:nth-child(even) .news__item-date {
-     border-top: 1px solid white;
+.news__item:nth-child(even) .news__item-date {
+    border-top: 1px solid white;
  }
+.news-button{
+    padding: 0 15px;
+    font-size: 11px;
+    margin-top: -20px;
+    margin-left: 40px;
+    margin-bottom: 10px;
+    text-align: center;
+    color: #fff;
+    background-color: #2B4074;
+    border-radius: 60px;
+    cursor: pointer;
+    border: none;
+    line-height: 30px;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;  
+    transform: scale(1);
+    transition: all 0.2s ease-in-out;
+}
 
+.news-button__active {
+    transform: scale(0.5);
+}
 
-
-
+.news-button:hover {
+    transition: all 0.4s ease;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
 @media (max-width:700px) {
     .news__item-title{
         font-size: 14px;
@@ -388,6 +419,12 @@ a{
         font-size: 12px;
     }
 }
+@media (max-width:350px) {
+    .news-button{
+        margin-left: 5px;
+    }
+}
+
 /*---------pagination--------------------------------*/
 .pagination{
   display: flex;
