--- a/website/main_app/templates/base/base.html
+++ b/website/main_app/templates/base/base.html
@@ -37,6 +37,14 @@
 {% block elec_table %}
 {% endblock %}
 
+<!--  Документы  -->
+{% block doc_list %}
+{% endblock %}
+
+<!--  Должники  -->
+{% block debtors_table %}
+{% endblock %}
+
 <!--  Обратная связь  -->
 {% block contact_us %}
 {% endblock %}
