--- a/website/main_app/templates/components/news.html
+++ b/website/main_app/templates/components/news.html
@@ -9,7 +9,7 @@
                     <h3 class="news__item-title">{{i.title}}</h3>
                     <p class="news__item-text">{{i.text}}</p>
                 </div>
-                <p class="news__item-date">дата</p>
+                <p class="news__item-date">{{i.date}}</p>
                 <button class="news-button">Полный текст</button>
             </div>
             {% endfor %}
