--- a/website/main_app/templates/components/best.html
+++ b/website/main_app/templates/components/best.html
@@ -1,5 +1,6 @@
 {% block best %}
-<section class="best">
+
+<section class="best" style="background-image: url('{{ MEDIA_URL }}/logo/logo.jpg');">
     <div class="best__inner">
         <div class="best__top-inner">
             <h1 class="best__title">Малый-Петербург</h1>
