--- a/website/main_app/templates/components/header.html
+++ b/website/main_app/templates/components/header.html
@@ -5,8 +5,10 @@
         <div class="header__inner">
             <div class="menu">
                 <ul class="menu__list">
-                    <li class="menu__list-item"><a class="menu__list-link" href="#">Регистрация</a></li>
+                    <li class="menu__list-item"><input class="menu__list-item--input-style" type="text" name="login" placeholder="логин"></li>
+                    <li class="menu__list-item"><input class="menu__list-item--input-style" type="text" name="pass" placeholder="пароль"></li>
                     <li class="menu__list-item"><a class="menu__list-link" href="#">Вход</a></li>
+                    <li class="menu__list-item"><a class="menu__list-link" href="{% url 'registration' %}">Регистрация</a></li>
                 </ul>
             </div>
         </div>
