есть регистрация логин. форма допиливается

--- a/website/main_app/templates/base/base.html
+++ b/website/main_app/templates/base/base.html
@@ -62,5 +62,6 @@
 <script src="{% static 'js/slick.min.js'%}"></script>
 <!--<script src="js/jquery.fancybox.min.js"></script>-->
 <script src="{% static 'js/main.js'%}"></script>
+<script src="{% static 'js/selectStyle.js'%}"></script>
 </body>
 </html>
