--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -52,6 +52,13 @@ a{
     align-items: center;
     height:78px; 
 }
+@media (max-width:800px) {
+    .header__inner{
+    justify-content: center;
+    height:inherit; 
+    }
+}
+
 /*-------header__personal_area--------------*/
 .header__personal_area{
     background-color: #2B4074; 
@@ -74,24 +81,18 @@ a{
     margin-left:35px;
 }
 .menu__list-item--input-style{
-        border: 1px solid #DFDFDF;
-       padding: 6px 17px;
-       border-radius:20px;
-       margin-bottom:20px;
-      
-       
+    border: 1px solid #DFDFDF;
+    padding: 6px 17px;
+    border-radius:20px;
+    margin-bottom:20px;     
 }
 .menu__list-item--input-style::placeholder{
-         color: #A1A1A1;
-          font-family: 'Roboto Condensed', sans-serif;
-         font-weight:400;
-         font-size:16px;
-         line-height:27px;
-       }
-
-
-
-
+    color: #A1A1A1;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight:400;
+    font-size:16px;
+    line-height:27px;
+}
 .menu__list-link{
     color: #fff;
     font-size: 22px;
@@ -100,6 +101,18 @@ a{
     font-weight:400 ;
     letter-spacing:.2rem;
     font-family: 'Montserrat', sans-serif;
+}
+@media (max-width:800px) {
+    .menu{
+        margin:0;
+    }
+    .menu__list{
+        flex-direction: column;
+        justify-content: center;
+    }
+.menu__list-item + .menu__list-item{
+        margin-left:0;
+    }
 }
 @media (max-width:360px) {
     .menu__list-link{
@@ -152,6 +165,11 @@ a{
         font-size:60px;
     }
 }  
+@media (max-width:800px) {
+    .best{
+        margin-top: -154px;
+    }
+} 
 @media (max-width:710px) {
     .best__title{
         font-size:40px;
@@ -1180,24 +1198,10 @@ padding-bottom: 40px;
     grid-template-rows: 1fr 1fr 1fr 1fr; 
     gap: 20px 10px; 
 }
-
-
 .galery img{
     width: 100%;
     height: 100%;
     object-fit: cover;    
-}
-
-
-@media (max-width: 900px){
-    .galery {
-          
-    } 
-}
-@media (max-width: 600px){
-    .galery {
-          
-    } 
 }
 /*-------user_datas--------------*/
 .user_datas{
@@ -1245,7 +1249,172 @@ padding-bottom: 40px;
     text-decoration: none;
     cursor: pointer;
 }
+/*-------form-------------*/
+.form{
+    max-width: 550px;
+    margin: 0 auto;
+    color:black;
+    padding: 30px 0;
+}
+.form *{
+    outline: none;
+}
+.form__body::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.9) url('loading-25.gif') center / 50px no-repeat;
+    opacity: 0;
+    visibility: hidden;
+  
+}
+.form__body._sending::after{
+    opacity: 1;
+    visibility: visible;
+}
+.form__title{
+    padding-top:10px ;
+    line-height: 19px;
+    font-size: 32px;
+    font-weight:600 ;
+    letter-spacing:.1rem;
+    font-family: 'Montserrat', sans-serif;
+    margin: 0 0 30px 0;
+}
+.form__item{
+    margin: 0 0 20px 0;
+}
+.form__label{
+    padding-top:10px ;
+    line-height: 19px;
+    font-size: 16px;
+    font-weight:600 ;
+    letter-spacing:.1rem;
+    font-family: 'Montserrat', sans-serif;
+    display: block;
+    margin: 0 0 10px 0;
+}
+.form__input{
+    height: 50px;
+    padding: 0 20px;
+    border-radius: 5px;
+    width: 100%;
+    font-size: 18px;
+}
+.form__input:focus{
+    box-shadow: 0 0 15px #2b4074;
+}
+.form__input._error{
+    box-shadow: 0 0 15px red;
+}
+.form__button{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 60px;
+    background-color: #2b4074;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0 5px 0 #161b13;
+    position: relative;
+    top: 0;
+}
+.form__button:hover{
+    background-color: #1b2745;
+}
+.form__button:active{
+    top: 3px;
+    box-shadow: 0 2px 0 #161b13;
+}
+.select{
+    width: 50%;
+    position: relative;
+}
+.select.is-active .select__body{
+    display: block;
 
+}
+.select__header{
+    border:1px solid #ccc;
+    cursor: pointer;
+    display: flex;
+}
+
+.select__current{
+    font-size: 18px;
+    line-height: 24px;
+    padding: 8px;
+}
+.select__icon{
+    align-items: center;
+    display: flex;
+    flex-shrink: 0;
+    justify-content: center;
+    height: 40px;
+    margin-left: auto;
+    text-align: center;
+    width: 40px;
+
+}
+.select__body{
+    border:1px solid #ccc;
+    position: absolute;
+    display: none;
+    border-top: 0;
+    left: 0;
+    right: 0;
+    top: 100%;
+    z-index: 20;
+    background-color:#fff ;
+}
+.select__item{
+    cursor: pointer;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 8px;
+}
+
+.select__item:hover{
+    background-color: rgb(205 209 219);
+    color:black;
+}
+/*------faq--------------*/
+.faq{}
+.faq__item{
+    margin-top: 50px;
+    border-bottom:1px solid #2B4074;
+    padding-bottom:20px;
+    margin-bottom: 50px;
+}
+.faq__list-item{  
+}
+.faq__list-title{
+    color: #2B4074;
+    font-size: 20px;
+    line-height: 28px; 
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+    cursor: default;
+    margin-bottom: 20px;
+}
+.faq__item-text{
+    color: black;
+    font-size: 16px;
+    line-height: 28px; 
+    font-weight: 500;
+    cursor: default;
+    font-family: 'Montserrat', sans-serif;
+}
 /*-------footer--------------*/
 .footer{
     background-color: #2B4074; 
