--- a/website/main_app/templates/components/news.html
+++ b/website/main_app/templates/components/news.html
@@ -1,4 +1,5 @@
 {% block news %}
+{% if request.user.is_authenticated %}
 <section class="news">
     <div class="container">
         <div class="news__inner">
@@ -32,4 +33,5 @@
         </div>
     </div>
 </section>
+{% endif %}
 {% endblock %}
