--- a/website/main_app/templates/base/base.html
+++ b/website/main_app/templates/base/base.html
@@ -62,6 +62,7 @@
 <script src="{% static 'js/slick.min.js'%}"></script>
 <!--<script src="js/jquery.fancybox.min.js"></script>-->
 <script src="{% static 'js/main.js'%}"></script>
+<!--<script src="{% static 'js/script.js'%}"></script>-->
 <script src="{% static 'js/selectStyle.js'%}"></script>
 </body>
 </html>
