--- a/website/main_app/templates/components/services.html
+++ b/website/main_app/templates/components/services.html
@@ -23,6 +23,12 @@
                         <h6 class="services__item-title">Должники</h6>
                     </div>
                 </a>
+                <a class="services__item" href="{% url 'faq' %}">
+                    <div class="services__item-inner">
+                        <img src="{% static 'images/small_spb/item-1.svg' %}" alt="" class="services__item-img">
+                        <h6 class="services__item-title">FAQ</h6>
+                    </div>
+                </a>
                 <a class="services__item" href="{% url 'feedback' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/6.png' %}" alt="" class="services__item-img">
