--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -348,7 +348,7 @@ a{
     background-color: #2B4074;
     cursor: pointer;
     position: absolute;
-    top:35%;
+    top:50%;
     -webkit-transform:translateY(-50%);
             transform:translateY(-50%);
     z-index: 5;
@@ -1029,6 +1029,9 @@ padding-bottom: 40px;
     -ms-flex-pack: distribute;
         justify-content: space-around;
 }
+.table__left{
+    justify-content: left;
+}
 .tables__inner{
     margin-right: 130px;
 }
@@ -1377,7 +1380,7 @@ padding-bottom: 40px;
 }
 /*-------user_datas--------------*/
 .user_datas{
-    min-height: 100vh;
+    
 }
 .user_info{
     display: -webkit-box;
@@ -1398,8 +1401,7 @@ padding-bottom: 40px;
     font-family: 'Montserrat', sans-serif;
     color: #2B4074;
     padding-bottom: 20px;
-    margin-bottom: 50px;
-}
+   }
 .user_info__box{
    display: -ms-grid;
    display: grid; 
@@ -1410,6 +1412,7 @@ padding-bottom: 40px;
       grid-template-rows: 1fr 1fr 1fr 1fr; 
   gap: 25px 60px;
   margin-right: auto;
+  margin-top: 50px;
 }
 .user_info__sub-title{
     font-size: 18px;
@@ -1429,6 +1432,38 @@ padding-bottom: 40px;
     text-decoration: none;
     cursor: pointer;
 }
+/*-------contact-in-personal-area-------------*/
+.contact-in-personal-area{
+    margin-bottom: 50px;
+}
+
+ .contact-in-personal-area__title{
+    padding-top:25px;
+    font-size: 22px;
+    line-height: 30px;
+    font-weight:500;
+    font-family: 'Montserrat', sans-serif;
+    color: #2B4074;
+    padding-bottom: 20px;
+    
+   
+}
+.contact-in-personal-area__link{
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
+    color: black;
+    text-decoration: none;
+    cursor: default;
+    text-decoration: none;
+}
+
+
+   
+
+
+
 /*-------form-------------*/
 .form{
     margin: 30px auto; 
