--- a/website/main_app/templates/components/services.html
+++ b/website/main_app/templates/components/services.html
@@ -5,42 +5,55 @@
     <div class="container">
         <div class="services__inner">
             <div class="services__slider">
+
+                {% if request.user.is_authenticated %}
                 <a class="services__item" href="{% url 'electricity' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/item-2.svg' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">Показания эл.энергии </h6>
                     </div>
                 </a>
+                {% endif %}
+
+                {% if request.user.is_authenticated %}
                 <a class="services__item" href="{% url 'documents' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/2.png' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">Документы</h6>
                     </div>
                 </a>
+                {% endif %}
+
+                {% if request.user.is_authenticated %}
                 <a class="services__item" href="{% url 'debstors' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/item-4.svg' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">Должники</h6>
                     </div>
                 </a>
+                {% endif %}
+
                 <a class="services__item" href="{% url 'faq' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/item-1.svg' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">FAQ</h6>
                     </div>
                 </a>
+
                 <a class="services__item" href="{% url 'feedback' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/6.png' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">Обратная связь</h6>
                     </div>
                 </a>
+
                 <a class="services__item" href="{% url 'content' %}">
                     <div class="services__item-inner">
                         <img src="{% static 'images/small_spb/5.png' %}" alt="" class="services__item-img">
                         <h6 class="services__item-title">О нас</h6>
                     </div>
                 </a>
+
             </div>
         </div>
     </div>
